--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-streamlit>=1.15.0
-pandas
-matplotlib
-spacy
 streamlit==1.15.0
 pandas==1.5.0
 matplotlib==3.5.1
 spacy==3.2.0
+pip install spacy==3.2.0 thinc==8.0.0
